--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,39 @@
 {
-    "name": "AetherIDE",
+    "name": "AetherIDE — AI Code Editor",
     "short_name": "AetherIDE",
-    "description": "AI-Powered Code Editor",
+    "description": "AI-Powered Code Editor with Team, Planner & Direct modes. Multi-provider support for OpenRouter, Gemini & OpenAI.",
     "start_url": "/",
     "display": "standalone",
+    "display_override": ["window-controls-overlay", "standalone"],
     "background_color": "#0D0F13",
     "theme_color": "#0D0F13",
     "orientation": "any",
+    "scope": "/",
+    "lang": "en",
+    "categories": ["developer", "productivity", "utilities"],
     "icons": [
         {
-            "src": "assets/icon-192.png",
+            "src": "assets/icons/icon-192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "assets/icon-512.png",
+            "src": "assets/icons/icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
-    ]
+    ],
+    "screenshots": [],
+    "shortcuts": [
+        {
+            "name": "New Chat",
+            "short_name": "New",
+            "url": "/?action=new",
+            "icons": [{ "src": "assets/icons/icon-192.png", "sizes": "192x192" }]
+        }
+    ],
+    "related_applications": [],
+    "prefer_related_applications": false
 }
