--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "AetherIDE — AI Code Editor",
     "short_name": "AetherIDE",
     "description": "AI-Powered Code Editor with Team, Planner & Direct modes. Multi-provider support for OpenRouter, Gemini & OpenAI.",
-    "start_url": "/",
+    "start_url": "/app",
     "display": "standalone",
     "display_override": ["window-controls-overlay", "standalone"],
     "background_color": "#0D0F13",
