--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites": [
-        { "source": "/app", "destination": "/index.html" },
-        { "source": "/app/(.*)", "destination": "/index.html" },
-        { "source": "/", "destination": "/landing.html" }
+    "routes": [
+        { "src": "^/app$", "dest": "/index.html" },
+        { "src": "^/app/(.*)$", "dest": "/index.html" },
+        { "src": "^/$", "dest": "/landing.html" }
     ],
     "headers": [
         {
