--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
     "routes": [
-        { "src": "^/app(.*)$", "dest": "/editor.html" }
+        {
+            "src": "^/app$",
+            "dest": "/editor.html"
+        },
+        {
+            "src": "^/app/(.*)$",
+            "dest": "/editor.html"
+        }
     ],
     "headers": [
         {
