--- a/vercel.json
+++ b/vercel.json
@@ -1,48 +1,43 @@
 {
     "routes": [
         {
-            "src": "^/app$",
+            "src": "^/app(.*)$",
             "dest": "/editor.html"
         },
         {
-            "src": "^/app/(.*)$",
-            "dest": "/editor.html"
-        }
-    ],
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                { "key": "X-Frame-Options", "value": "DENY" },
-                { "key": "X-Content-Type-Options", "value": "nosniff" },
-                { "key": "X-XSS-Protection", "value": "1; mode=block" },
-                { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-                { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
-            ]
+            "src": "^/sw.js$",
+            "dest": "/sw.js",
+            "headers": {
+                "Cache-Control": "no-cache, no-store, must-revalidate"
+            }
         },
         {
-            "source": "/sw.js",
-            "headers": [
-                { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
-            ]
+            "src": "^/assets/(.*)$",
+            "headers": {
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
         },
         {
-            "source": "/assets/(.*)",
-            "headers": [
-                { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-            ]
+            "src": "^/css/(.*)$",
+            "headers": {
+                "Cache-Control": "public, max-age=604800"
+            }
         },
         {
-            "source": "/css/(.*)",
-            "headers": [
-                { "key": "Cache-Control", "value": "public, max-age=604800" }
-            ]
+            "src": "^/js/(.*)$",
+            "headers": {
+                "Cache-Control": "public, max-age=604800"
+            }
         },
         {
-            "source": "/js/(.*)",
-            "headers": [
-                { "key": "Cache-Control", "value": "public, max-age=604800" }
-            ]
+            "src": "^/(.*)$",
+            "headers": {
+                "X-Frame-Options": "DENY",
+                "X-Content-Type-Options": "nosniff",
+                "X-XSS-Protection": "1; mode=block",
+                "Referrer-Policy": "strict-origin-when-cross-origin",
+                "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
+            }
         }
     ]
 }
