--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,11 @@
                 "Referrer-Policy": "strict-origin-when-cross-origin",
                 "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
             }
+        },
+        {
+            "src": "^/(.*)$",
+            "dest": "/404.html",
+            "status": 503
         }
     ]
 }
