--- a/vercel.json
+++ b/vercel.json
@@ -20,13 +20,17 @@
         {
             "src": "^/css/(.*)$",
             "headers": {
-                "Cache-Control": "public, max-age=604800"
+                "Cache-Control": "public, max-age=604800",
+                "X-Robots-Tag": "noindex, nofollow",
+                "X-Content-Type-Options": "nosniff"
             }
         },
         {
             "src": "^/js/(.*)$",
             "headers": {
-                "Cache-Control": "public, max-age=604800"
+                "Cache-Control": "no-store, no-cache, must-revalidate",
+                "X-Robots-Tag": "noindex, nofollow",
+                "X-Content-Type-Options": "nosniff"
             }
         },
         {
@@ -36,7 +40,8 @@
                 "X-Content-Type-Options": "nosniff",
                 "X-XSS-Protection": "1; mode=block",
                 "Referrer-Policy": "strict-origin-when-cross-origin",
-                "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
+                "Permissions-Policy": "camera=(), microphone=(), geolocation=()",
+                "X-Robots-Tag": "noindex, nofollow"
             }
         }
     ]
